--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,33 @@
-# Pythonのキャッシュと仮想環境
-__pycache__/
-*.pyc
-env/
-venv/
-.venv/
-
-# OS・エディタ固有の設定ファイル
-.DS_Store
-.vscode/
-.idea/
-
-# ローカルデータベース（Renderでは永続ディスクを使うので不要）
-chroma_db/
-*.db
-*.sqlite3
-
-# Git関連
+Gitリポジトリの管理ファイル
 .git
 .gitignore
 
-# 環境変数ファイル（Renderの環境変数を使うので不要）
-.env
+Docker関連
+.dockerignore
+
+Pythonのキャッシュと仮想環境
+pycache/
+*.pyc
+*.pyo
+*.pyd
+.venv/
+venv/
+
+IDEの設定ファイル
+.vscode/
+
+データベースとデータフォルダ
+data/
+chroma_db/
+
+★★★★★ ここから追加 ★★★★★
+アプリケーションに関係ないインストーラーや圧縮ファイルを無視する
+*.exe
+*.msi
+*.zip
+*.7z
+*.gz
+*.tar
+*.crdownload
+
+★★★★★ ここまで追加 ★★★★★
