--- a/.dockerignore
+++ b/.dockerignore
@@ -18,9 +18,9 @@ IDEの設定ファイル
 
 データベースとデータフォルダ
 data/
-chroma_db/
 
-★★★★★ ここから追加 ★★★★★
+★★★★★ Renderデプロイ時は、下の行をコメントアウトしてDBをイメージに含める ★★★★★
+chroma_db/
 アプリケーションに関係ないインストーラーや圧縮ファイルを無視する
 *.exe
 *.msi
@@ -29,5 +29,3 @@ chroma_db/
 *.gz
 *.tar
 *.crdownload
-
-★★★★★ ここまで追加 ★★★★★
