ユーザ管理システム追加

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ replit.nix
 .env
 諸資格過程/
 チャットボットdb/
+
+"GeminiAPI\343\201\256\343\203\235\343\203\252\343\202\267\343\203\274,supabace,RAG\343\201\256\350\252\277\346\237\273.docx"
+        c.html
+        grafana_data/
+        migrate.py
+        prometheus-3.6.0-rc.1.windows-amd64/
+        "\343\202\263\343\203\236\343\203\263\343\203\211\351\233\206/"
