会話ログ管理ツール削除

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ replit.nix
         migrate.py
         prometheus-3.6.0-rc.1.windows-amd64/
         "\343\202\263\343\203\236\343\203\263\343\203\211\351\233\206/"
+ProgPython
