--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ replit.nix
       
         prometheus-3.6.0-rc.1.windows-amd64/
         "\343\202\263\343\203\236\343\203\263\343\203\211\351\233\206/"
+prometheus-3.6.0-rc.1.windows-amd64/
+
 ProgPythongit 
 ProgPython/
 grafana_data/
