--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,251 @@
-fastapi
-uvicorn[standard]
-gunicorn
-google-generativeai
-supabase>=1.0.0
-asyncpg>=0.28.0
-PyPDF2
-python-docx
-beautifulsoup4
-lxml
-authlib
-itsdangerous
-python-dotenv
-pydantic
-requests
-pandas
-python-multipart
-prometheus-fastapi-instrumentator
-bcrypt
-PyJWT
-python-multipart
-email-validator
+aenum==3.1.16
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+alembic==1.15.2
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+asyncpg==0.30.0
+attrs==25.3.0
+audioop-lts==0.2.1
+Authlib==1.6.3
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.3
+black==25.1.0
+blinker==1.9.0
+breadability==0.1.20
+build==1.2.2.post1
+CacheControl==0.14.3
+cachetools==5.5.2
+certifi==2025.10.5
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+chromadb==1.0.15
+click==8.2.0
+colorama==0.4.6
+coloredlogs==15.0.1
+comtypes==1.4.11
+cryptography==44.0.2
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+deprecation==2.1.0
+distro==1.9.0
+dnspython==2.7.0
+docopt==0.6.2
+durationpy==0.10
+ecdsa==0.19.1
+email_validator==2.2.0
+faiss-cpu==1.11.0
+fastapi==0.115.12
+filelock==3.18.0
+firebase_admin==7.1.0
+flake8==7.3.0
+Flask==3.1.1
+flask-cors==5.0.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+flatbuffers==25.2.10
+frozenlist==1.6.0
+fsspec==2025.3.2
+future==1.0.0
+git-filter-repo==2.47.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.181.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.3.1
+google-crc32c==1.7.1
+google-genai==1.10.0
+google-generativeai==0.8.5
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+greenlet==3.2.1
+gritql==0.2.0
+grpcio==1.72.0rc1
+grpcio-status==1.71.0
+gunicorn==23.0.0
+h11==0.14.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.8
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.31.1
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+kubernetes==33.1.0
+langchain==0.3.24
+langchain-cli==0.0.36
+langchain-community==0.3.22
+langchain-core==0.3.56
+langchain-openai==0.3.14
+langchain-text-splitters==0.3.8
+langserve==0.3.1
+langsmith==0.3.37
+line-bot-sdk==3.17.1
+lxml==5.3.2
+Mako==1.3.10
+mangum==0.19.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mccabe==0.7.0
+mdurl==0.1.2
+mecab-python3==1.0.10
+mmh3==5.1.0
+mpmath==1.3.0
+msgpack==1.1.1
+multidict==6.4.3
+mypy==1.17.1
+mypy_extensions==1.1.0
+mysql-connector-python==9.4.0
+narwhals==1.42.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.2.5
+oauthlib==3.3.1
+ollama==0.5.1
+onnxruntime==1.22.1
+openai==1.78.1
+opentelemetry-api==1.34.1
+opentelemetry-exporter-otlp-proto-common==1.34.1
+opentelemetry-exporter-otlp-proto-grpc==1.34.1
+opentelemetry-proto==1.34.1
+opentelemetry-sdk==1.34.1
+opentelemetry-semantic-conventions==0.55b1
+orjson==3.10.16
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+passlib==1.7.4
+pathspec==0.12.1
+patsy==1.0.1
+pillow==11.2.1
+platformdirs==4.3.8
+plotly==6.1.2
+Pmw==2.1.1
+postgrest==2.19.0
+posthog==5.4.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.22.1
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+PyAudio==0.2.14
+pybase64==1.4.1
+pycodestyle==2.14.0
+pycountry==24.6.1
+pycparser==2.22
+pydantic==2.11.9
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pyflakes==3.4.0
+Pygments==2.19.1
+PyJWT==2.10.1
+pymol @ file:///C:/Users/81808/OneDrive/IT/testapp/pymol-3.1.0a0-cp313-cp313-win_amd64.whl#sha256=5413bf7f9520b17a5a45ec976b6e3f213450ac85e57d98087399cd70885bdaeb
+pyparsing==3.2.3
+pypdf==5.9.0
+PyPDF2==3.0.1
+PyPika==0.48.9
+pypiwin32==223
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.1.0
+python-jose==3.5.0
+python-multipart==0.0.20
+pyttsx3==2.98
+pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+realtime==2.19.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.26.0
+rsa==4.9
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+sentence-transformers==5.0.0
+setuptools==80.7.1
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+SpeechRecognition==3.14.3
+SQLAlchemy==2.0.40
+sse-starlette==1.8.2
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+starlette==0.46.2
+statsmodels==0.14.4
+storage3==2.19.0
+StrEnum==0.4.15
+sumy==0.11.0
+supabase==2.19.0
+supabase-auth==2.19.0
+supabase-functions==2.19.0
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+tomlkit==0.13.2
+torch==2.7.0
+torchaudio==2.7.0
+torchvision==0.22.0
+tqdm==4.67.1
+transformers==4.51.3
+typer==0.15.2
+types-beautifulsoup4==4.12.0.20250516
+types-html5lib==1.1.11.20250917
+types-requests==2.32.4.20250913
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.1.1
+urllib3==2.4.0
+uvicorn==0.34.2
+watchdog==6.0.0
+watchfiles==1.1.0
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wrapt==1.17.2
+WTForms==3.2.1
+yarl==1.20.0
+zipp==3.23.0
+zstandard==0.23.0
