--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,7 @@ python-docx==1.2.0
 # --- その他ユーティリティ ---
 python-dotenv==1.1.0
 prometheus-fastapi-instrumentator==7.1.0
+
+unstructured[local-inference,pdf,tesseract]
+langchain-text-splitters
+markdownify
