--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     runtime: python # Corrected: Use 'runtime' instead of 'env'
     plan: free # Or your preferred plan
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
