--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ pydantic==2.11.9
 python-multipart==0.0.20
 uvicorn==0.34.2
 requests==2.32.5
-httpx beautifulsoup4
+httpx 
+beautifulsoup4
 
 # --- 認証 & セキュリティ ---
 Authlib==1.6.3
